--- a/app/Resources/views/user/userFrontEnd.html.twig
+++ b/app/Resources/views/user/userFrontEnd.html.twig
@@ -130,7 +130,7 @@
                         <th>Email</th>
                         <th>Prénom</th>
                         <th>Nom</th>
-                        <th>Statut</th>
+                        <th class="filter-select">Statut</th>
                         <th>Cohortes</th>
                         <th class="filter-select">Institut</th>
                         <th class="filter-select">Activé</th>
