--- a/app/Resources/views/user/myInscriptions.html.twig
+++ b/app/Resources/views/user/myInscriptions.html.twig
@@ -114,7 +114,7 @@
                         <tr class="disLine hasAccess" data-disId="{{ disc.id }}">
                             <td>{{ disc.id }}</td>
                             <td>{{ disc.nom }}</td>
-                            <td><a class="btn btnHandleInscr btnDesinscr"><i class="fa fa-ban" aria-hidden="true"></i> Désinscrire
+                            <td><a class="btn btnHandleInscr btnDesinscr selColor"><i class="fa fa-ban" aria-hidden="true"></i> Désinscrire
                                 </a></td>
                         </tr>
                     {% endfor %}
@@ -122,7 +122,7 @@
                         <tr class="disLine noAccess" data-disId="{{ disc.id }}">
                             <td>{{ disc.id }}</td>
                             <td>{{ disc.nom }}</td>
-                            <td><a class="btn btnHandleInscr btnInscr"><i class="fa fa-sign-in" aria-hidden="true"></i>
+                            <td><a class="btn btnHandleInscr btnInscr selColor"><i class="fa fa-sign-in" aria-hidden="true"></i>
                                     Inscrire
                                 </a></td>
                         </tr>
