--- a/app/Resources/views/user/myProfile.html.twig
+++ b/app/Resources/views/user/myProfile.html.twig
@@ -185,8 +185,9 @@
             {% endif %}
         </div>
         <div class="blocRGPD block">
-            <div class="sectionRGPD">Ici, un texte pour présenter la rgpd et dire qu'on peut supprimer ses données
-                personnelles
+            <div class="sectionRGPD">
+                Soucieuse de protéger la vie privée de ses utilisateurs, l’Association pour la formation à distance de l’Enseignement catholique, AFADEC s’engage dans la protection des données personnelles.
+                La présente Charte a pour objet de rappeler nos principes et nos actions visant au respect de la réglementation applicable en matière de protection des données à caractère personnel.
             </div>
             <!--<div class="btnDeleteDatas btn btn-warning" data-typeDatas="ALL">Supprimer mes données</div>-->
             <div class="myRGPDdatas">
