--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -40,6 +40,7 @@
                     btnValidAssocCorrecteur.click();
                     //window.location.href = link;
                     window.open(link);
+                    $('.modal').modal('toggle');
                 });
             });
 
